Tweak to avoid flicker on page loading

--- a/apps/frontend/src/css/index.css
+++ b/apps/frontend/src/css/index.css
@@ -1,5 +1,33 @@
-body {
+/*
+ * Tweak to prevent the screen from flashing before javascript is loaded if user's device is in shadow mode
+ */
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-background-header: #fff;
+    --color-background: #f8f8f8;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-background: #1a1a1a;
+    --color-background-header: #111;
+  }
+}
+
+/* The `theme` attribute is added to the body only once React has loaded */
+body[theme="light"] {
   --color-background: #f8f8f8;
+  --color-background-header: #fff;
+}
+
+/*
+ * End tweak
+ */
+
+body,
+body[theme="light"] {
   --color-text: #222;
   --color-text-accent: #2a2;
   --color-shadow: #0003;
@@ -7,7 +35,6 @@ body {
   --color-background-error: #fa7676;
   --color-text-error: #4f0a0a;
   --color-background-highlight: #fff;
-  --color-background-header: #fff;
   --color-background-footer: #121118;
   --color-text-footer: #fff;
   --color-text-header: #444;
@@ -24,7 +51,7 @@ body {
   --color-accent-desaturated: #9c9;
 }
 
-body[data-bs-theme="dark"] {
+body[theme="dark"] {
   --color-background: #1a1a1a;
   --color-text: #ddd;
   --color-text-accent: #2a2;
